--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <div id="notificationMenu" class="hidden absolute right-4 top-[90%] sm:top-full mt-2 w-72 bg-white rounded-xl shadow-2xl border border-gray-200 overflow-hidden z-50 animate-fade-in">
       <div class="bg-gray-50 px-4 py-2 border-b border-gray-100 flex justify-between items-center">
         <span class="text-cura-primary font-bold text-xs uppercase tracking-wider">Novedades</span>
-        <span class="text-[9px] text-gray-400 font-medium">Actualizado: 23/01/26</span>
+        <span class="text-[9px] text-gray-400 font-medium">Actualizado: 24/01/26</span>
       </div>
       <div class="max-h-[400px]">
         <div class="p-4 hover:bg-blue-50 transition-colors border-b border-gray-50 cursor-default text-left">
@@ -278,7 +278,7 @@
             <div class="flex-1">
               <div class="flex justify-between items-start mb-1">
                 <p class="text-gray-800 text-xs font-bold">¡Nuevo Chat con IA!</p>
-                <span class="text-[9px] text-gray-400 whitespace-nowrap ml-2">Hace 2 días</span>
+                <span class="text-[9px] text-gray-400 whitespace-nowrap ml-2">24/01/26</span>
               </div>
               <p class="text-gray-600 text-[11px] leading-relaxed">Consultá detalles técnicos de la ley con nuestro asistente inteligente.</p>
             </div>
